# esp32s3-can-gateway

./: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.c
main/logger/: spiffs_logger.c  spiffs_logger.h
main/monitor/: monitor.c  monitor.h
main/mqtt/: mqtt_client.c  mqtt_client.h
main/twai/: twai_handler.c  twai_handler.h
main/wifi/: wifi_manager.c  wifi_manager.h
